--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Agentes.sys Neural Gateway",
-  "short_name": "Agentes.sys",
+  "name": "agentes.sys | Neural Gateway",
+  "short_name": "agentes.sys",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#0a0a0a",
